# bombe-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_TASK_BOARD.md  README.md  VALID_ITEMS_MASTER_PLAN.md  bombe-technical-spec.md  pyproject.toml  rust_migration_detailed_plan.md  rust_migration_plan.md
.github/workflows/: ci.yml
benchmarks/: README.md  USAGE.md
crates/bombe-core/: Cargo.toml
crates/bombe-core/benches/: core_bench.rs
crates/bombe-core/src/: errors.rs  lib.rs  models.rs
crates/bombe-core/src/indexer/: callgraph.rs  filesystem.rs  imports.rs  mod.rs  pagerank.rs  parser.rs  pipeline.rs  semantic.rs  symbols.rs
crates/bombe-core/src/query/: blast.rs  change_impact.rs  context.rs  data_flow.rs  guards.rs  hybrid.rs  mod.rs  planner.rs  references.rs  search.rs  structure.rs  tokenizer.rs
crates/bombe-core/src/query/federated/: executor.rs  planner.rs
crates/bombe-core/src/store/: database.rs  mod.rs  schema.rs
crates/bombe-core/src/store/sharding/: catalog.rs  mod.rs  resolver.rs  router.rs
deploy/docker/: Dockerfile  docker-compose.yml
deploy/k8s/: deployment.yaml  service.yaml
docs/plans/: 2026-02-08-hybrid-all-agent-implementation-design.md  2026-02-08-spec-completion-9-phase-execution-plan.md
docs/runbooks/: hybrid-mode.md  local-only-mode.md  rollback-and-quarantine.md
integrations/vscode/: README.md  extension.js  package.json
queries/go/: tags.scm
queries/java/: tags.scm
queries/python/: tags.scm
queries/typescript/: tags.scm
src/bombe/: __init__.py  _bombe_core.pyi  config.py  models.py  server.py  (+1 more)
tests/: __init__.py  test_callgraph.py  test_config.py  test_control_plane.py  test_correctness_gates.py  test_cross_repo_resolver.py  test_database.py  test_federated_correctness.py  test_federated_executor.py  test_federated_planner.py  test_filesystem.py  test_git_diff.py  test_graph_mutation_regression.py  test_imports.py  test_incremental.py  test_indexer.py  test_integration_assets.py  test_mcp_contract.py  test_models.py  test_multilang_regression.py  test_pagerank.py  test_parser.py  test_plugins.py  test_query_blast.py  test_query_change_impact.py  test_query_context.py  test_query_data_flow.py  test_query_error_paths.py  test_query_fuzz.py  test_query_hybrid.py  test_query_planner.py  test_query_references.py  test_query_search.py  test_query_structure.py  test_release_gates.py  test_semantic.py  test_server.py  test_shard_catalog.py  test_shard_router.py  test_stress_indexing.py  (+12 more)
ui/: app.js  index.html  styles.css
(+61 files in other folders)
