[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bombe"
version = "0.1.0"
description = "Structure-aware code retrieval MCP server for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Bombe Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
bombe = "bombe.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
