[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bombe"
version = "0.1.0"
description = "Structure-aware code retrieval MCP server for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Bombe Contributors" }
]
dependencies = [
  "mcp>=1.0.0",
  "tree-sitter>=0.21,<0.22",
  "tree-sitter-languages>=1.10.2,<1.11",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6.0",
  "mypy>=1.10.0",
  "ruff>=0.6.0",
]
runtime = [
  "mcp>=1.0.0",
  "tree-sitter>=0.21,<0.22",
  "tree-sitter-languages>=1.10.2,<1.11",
]

[project.scripts]
bombe = "bombe.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.maturin]
module-name = "_bombe_core"
manifest-path = "crates/bombe-core/Cargo.toml"
python-source = "src"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
