[package]
name = "bombe-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "_bombe_core"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
ignore = "0.4"
sha2 = "0.10"
regex = "1.11"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
indexmap = "2"
crc32fast = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_bench"
harness = false
